package model;

public abstract class Person {

	private String name;
	private String cpf;
}