package model;

public class RegisterCard {
}